--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ body {
 .navbar .navbar-logo span {
   color: var(--primary);
 }
-
 .navbar .navbar-nav a {
   color: #fff;
   display: inline-block;
@@ -81,8 +80,70 @@ body {
 #hamburger-menu {
   display: none;
 }
+
+/* hero section */
+.hero {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url("img/bg-coffe-jpg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.hero::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 20%;
+  bottom: 0;
+  background: linear-gradient(
+    0deg,
+    rgba(1, 1, 3, 1) 8%,
+    rgba(255, 255, 255, 0) 50%
+  );
+}
+
+.hero .content {
+  padding: 1.4rem 7%;
+  max-width: 60rem;
+}
+
+.hero .content h1 {
+  font-size: 5em;
+  color: #fff;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  line-height: 1.5;
+}
+
+.hero .content h1 span {
+  color: var(--primary);
+}
+
+.hero .content p {
+  font-size: 1.1rem;
+  margin-top: 1rem;
+  line-height: 1.4;
+  font-weight: 280;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
+.hero .content .cta {
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.4rem;
+  color: #fff;
+  background-color: var(--primary);
+  border-radius: 0.5rem;
+  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
+
 /* media querues */
-Add commentMore actions
 
 /* laptop */
 @media (max-width: 1366px) {
@@ -96,43 +157,43 @@ Add commentMore actions
   html {
     font-size: 62.5%;
   }
-}
 
-#hamburger-menu {
-  display: inline-block;
-}
+  #hamburger-menu {
+    display: inline-block;
+  }
 
-.navbar .navbar-nav {
-  position: absolute;
-  top: 100%;
-  right: -100%;
-  background-color: #fff;
-  width: 30rem;
-  height: 100vh;
-}
+  .navbar .navbar-nav {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    background-color: #fff;
+    width: 30rem;
+    height: 100vh;
+  }
 
-.navbar .navbar-nav.active {
-  right: 0;
-}
+  .navbar .navbar-nav.active {
+    right: 0;
+  }
 
-.navbar .navbar-nav a {
-  color: var(--bg);
-  display: block;
-  margin: 1.5rem;
-  padding: 0.5rem;
-  font-size: 1.7rem;
-}
+  .navbar .navbar-nav a {
+    color: var(--bg);
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 1.7rem;
+  }
 
-.navbar .navbar-nav a::after {
-  transform-origin: 0 0;
-}
+  .navbar .navbar-nav a::after {
+    transform-origin: 0 0;
+  }
 
-.navbar .navbar-nav a:hover::after {
-  transform: scaleX(0.2);
-}
+  .navbar .navbar-nav a:hover::after {
+    transform: scaleX(0.2);
+  }
+
 
 /* phone */
-@media (max-width: 450px) {
+More actions @media (max-width: 450px) {
   html {
     font-size: 55%;
   }
