--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   background-color: var(--bg);
   color: #fff;
   min-height: 3000px;
+   min-height: 5000px;
 }
 /* navbar */
 .navbar {
@@ -144,19 +145,22 @@ body {
 
 /* about section */
 .about,
-.menu {
+.menu,
+.contact {
   padding: 8rem 7% 1.4rem;
 }
 
 .about h2,
-.menu h2  {
+.menu h2,
+.contact h2{
   text-align: center;
   font-size: 2.6rem;
   margin-bottom: 3rem;
 }
 
 .about h2 span,
-.menu h2 span{
+.menu h2 span,
+.contact h2 span{
   color: var(--primary);
 }
 
@@ -189,10 +193,12 @@ body {
   line-height: 1.6;
 }
 /* menu section */
-.menu h2 {
+.menu h2,
+.contact h2 {
   margin-bottom: 1rem;
 }
-.menu p {
+.menu p
+.contact p {
   text-align: center;
   max-width: 30rem;
   margin: auto;
@@ -221,6 +227,52 @@ body {
 .menu .row .menu-card .menu-card-title {
   margin: 1rem auto 0.5rem;
 }
+/* contact section */
+.contact .row {
+  display: flex;
+  margin-top: 2rem;
+  background-color: #222;
+}
+
+.contact .row .map {
+  flex: 1 1 45rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.contact .row form {
+  flex: 1 1 45rem;
+  padding: 5rem 2rem;
+  text-align: center;
+}
+
+.contact .row form .input-group {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  background-color: var(--bg);
+  border: 1px solid #eee;
+  padding-left: 2rem;
+}
+
+.contact .row form .input-group input {
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.1rem;
+  background: none;
+  color: #fff;
+}
+
+.contact .row form .btn {
+  margin-top: 2rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.5rem;
+  color: #fff;
+  background-color: var(--primary);
+  cursor: pointer;
+}
+
 
 
 /* media querues */
@@ -292,6 +344,22 @@ body {
   .about .row .content p {
     font-size: 1.6rem;
   }
+   .menu p {
+    font-size: 1.2rem;
+  }
+
+  .contact .row {
+    flex-wrap: wrap;
+  }
+
+  .contact .row .map {
+    height: 30rem;
+  }
+
+  .contact .row form {
+    padding-top: 0;
+  }
+
 }
 
 /* phone */
