--- a/style.css
+++ b/style.css
@@ -81,6 +81,37 @@ body {
 #hamburger-menu {
   display: none;
 }
+/* navbar search form */
+.navbar .search-form {
+  position: absolute;
+  top: 100%;
+  right: 7%;
+  background-color: #fff;
+  width: 40rem;
+  height: 4.5rem;
+  display: flex;
+  align-items: center;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
+}
+.navbar .search-form.active {
+  transform: scaleY(1);
+}
+.navbar .search-form input {
+  height: 100%;
+  width: 100%;
+  font-size: 1.5rem;
+  color: var(--bg);
+  padding: 1rem;
+}
+.navbar .search-form label {
+  cursor: pointer;
+  font-size: 1.4rem;
+  margin-right: 1.5rem;
+  color: var(--bg);
+}
+
 
 /* hero section */
 .hero {
@@ -360,7 +391,11 @@ footer .credit a {
   .navbar .navbar-nav a:hover::after {
     transform: scaleX(0.2);
   }
-  .about .row {Add commentMore actions
+  .navbar .search-form {Add commentMore actions
+    width: 90%;
+    right: 2rem;
+  }
+  .about .row {
     flex-wrap: wrap;
   }
 
