--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ body {
   justify-content: center;
   gap: 0.5rem;
 }
-.products .product-icons a {Add commentMore actions
+.products .product-icons a {
   width: 4rem;
   height: 4rem;
   color: #fff;
@@ -338,7 +338,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-products .product-icons a {Add commentMore actions
+.products .product-icons a {
   width: 4rem;
   height: 4rem;
   color: #fff;
@@ -370,8 +370,41 @@ products .product-icons a {Add commentMore actions
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.products .product-icons a:hover {
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
+}
+.products .product-image {
+  padding: 1rem 0;
 }
 
+.products .product-image img {
+  height: 25rem;
+}
+.products .product-content h3 {
+  font-size: 2rem;
+}
+
+.products .product-stars {
+  font-size: 1.7rem;
+  padding: 0.8rem;
+  color: var(--primary);
+}
+
+.products .product-stars .star-full {
+  fill: var(--primary);
+}
+.products .product-price {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.products .product-price span {
+  text-decoration: line-through;
+  font-weight: lighter;
+  font-size: 1rem;
+}
 
 /* contact section */
 .contact .row {
@@ -454,6 +487,76 @@ footer .credit {
 footer .credit a {
   color: var(--bg);
   font-weight: 700;
+}
+
+
+/* modal box */
+/* item detail */
+.modal {
+  display: flex;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.modal-container {
+  position: relative;
+  background-color: #fefefe;
+  color: var(--bg);
+  margin: 15% auto;
+  padding: 1rem;
+  border: 1px solid #666;
+  width: 75%;
+  animation: animateModal 0.5s;
+}
+
+/* modal animation */
+@keyframes animateModal {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+.modal-container .close-icon {
+  position: absolute;
+  right: 1rem;
+}
+
+.modal-content {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.modal-content img {
+  height: 15rem;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+}
+
+.modal-content p {
+  font-size: 1.1rem;
+  line-height: 1.1rem;
+  margin-top: 1rem;
+}
+
+.modal-content a {
+  display: flex;
+  gap: 1rem;
+  width: 12rem;
+  background-color: var(--primary);
+  color: #fff;
+  margin-top: 1.2rem;
+  padding: 1rem 1.6rem;
 }
 
 
