--- a/style.css
+++ b/style.css
@@ -246,6 +246,10 @@ body {
 
 .about .row .about-img img {
   width: 100%;
+  -webkit-mask-image: url('img/ayam.svg');
+  -webkit-mask-size: 50%;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
 }
 
 .about .row .content {
