--- a/style.css
+++ b/style.css
@@ -173,6 +173,14 @@ body {
   -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
   mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
 }
+.hero .mask-container {
+  position: absolute;
+  inset: 0;
+  -webkit-mask-image: url("img/Bg.recovered_transparent.png");
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: cover;
+  -webkit-mask-position: center;
+}
 
 .hero .content {
   padding: 1.4rem 7%;
