--- a/style.css
+++ b/style.css
@@ -173,6 +173,11 @@ body {
   font-weight: bold;
   font-size: 1.1rem;
 }
+.shopping-cart h4 {
+  font-size: 1.6rem;
+  margin-top: -1rem;
+  text-align: center;
+}
 
 /* hero section */
 .hero {
